fixing horizontal overflow

--- a/style.css
+++ b/style.css
@@ -10,14 +10,22 @@ body {
     font-family: "Quicksand", serif;
     font-optical-sizing: auto;    
     font-style: normal;
-    scroll-behavior: smooth;   
-    background: linear-gradient(to right, #f9d26d, #f4c6d4);    
+    scroll-behavior: smooth;           
 }
+
+html, body {
+    overflow-x: hidden; 
+    width: 100%;
+    padding: 0;
+    margin: 0;
+}
+
 
 * {
     margin: 0;
     padding: 0;
 }
+
 
 a {
     font-weight: bold;
@@ -36,7 +44,7 @@ text-decoration: underline;
 
 .nav-item.active {
     font-weight: bold;
-    color: red;  /* Change color to indicate it's active */
+    color: red;
   }
 
 .welcome_text {
@@ -113,9 +121,6 @@ background-repeat: no-repeat;
     width: 100% !important;
     margin: 0;
     }
-
-
-
 
 /*Shopping cart*/
 /* Ensuring sticky cart behavior */
